istio/istio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
spec:
  rules:
  - host: kiali-dev.talkedu.cn
    http:
      paths:      
      - path: /
        backend:
          serviceName: kiali
          servicePort: http-kiali
  - host: jaeger-dev.talkedu.cn
    http:
      paths:      
      - path: /
        backend:
          serviceName: jaeger-query
          servicePort: query-http
